[package]
name = "offloader"
version = "0.1.0"
edition = "2021"

[build-dependencies]
prost-build = "0.13"

[dependencies]
k8s-openapi = { version = "0.18.0", features = ["v1_26"] }
kube = { version = "0.84.0", features = ["runtime", "derive", "ws"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
prost = "0.13"
prost-types = "0.13"